--- a/res/layout/incoming_event_detail_item.xml
+++ b/res/layout/incoming_event_detail_item.xml
@@ -32,29 +32,42 @@
         android:layout_marginTop="@dimen/nibble"
         android:textColor="@color/off_white_1" />
 
-    <LinearLayout android:orientation="horizontal"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:showDividers="middle"
-                  android:dividerPadding="12dp"
-                  android:minHeight="48dp"
-                  android:divider="?android:attr/listDivider"
-        android:background="@drawable/rounded_rectangle_primary_100"
-        android:layout_marginTop="@dimen/nibble">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/nibble"
+        android:background="@drawable/rounded_rectangle_incoming_event"
+        android:minHeight="48dp"
+        android:layout_marginRight="@dimen/right_text_padding">
+
+        <TextView
+                android:id="@+id/message"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+            android:paddingRight="@dimen/padding"
+            android:paddingLeft="@dimen/padding"
+            android:textAlignment="center"
+            android:layout_marginTop="@dimen/nibble"
+            android:layout_marginBottom="@dimen/nibble"
+            android:gravity="center_vertical"
+            android:alpha="0.85"
+            android:layout_toLeftOf="@+id/linearLayout3"
+            android:layout_toStartOf="@+id/linearLayout3" />
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/nibble"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            android:layout_alignParentEnd="true"
+            android:id="@+id/linearLayout3">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/event_class_icon"
                 android:src="@drawable/ic_action_map"
-                android:alpha="0.5"
                 android:layout_gravity="center_horizontal" />
 
             <TextView
@@ -65,19 +78,7 @@
                 android:alpha="0.5"
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
-
-        <TextView
-                android:id="@+id/message"
-                android:layout_height="wrap_content"
-                android:layout_width="fill_parent"
-            android:paddingRight="@dimen/padding"
-            android:paddingLeft="@dimen/padding"
-            android:textAlignment="center"
-            android:layout_marginTop="@dimen/nibble"
-            android:layout_marginBottom="@dimen/nibble"
-            android:gravity="center_vertical"
-            android:alpha="0.85" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <FrameLayout
         android:layout_width="fill_parent"
