--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -32,7 +32,7 @@
     <style name="addressHeader" parent="@android:style/TextAppearance.Small">
         <item name="android:textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/holo_blue</item>
+        <item name="android:textColor">@android:color/holo_blue_light</item>
     </style>
 
     <style name="addressButton" parent="@android:style/Widget.Holo.Button.Borderless"/>
