--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -41,7 +41,7 @@
     </style>
 
     <style name="searchTextHiglight">
-        <item name="android:textColor">@color/holo_blue</item>
+        <item name="android:textColor">@android:color/holo_blue_light</item>
         <item name="android:textStyle">bold</item>
     </style>
 
