Updated the database Update class to enable updating of single contacts, including a update time Marker system that will tell the system when each contact has been last updated based on each communication channel.
Also, fixed bug with groups editor.

--- a/res/layout/import_activity.xml
+++ b/res/layout/import_activity.xml
@@ -83,7 +83,9 @@
             android:indeterminate="false"
             android:layout_below="@+id/parse_file"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:secondaryProgressTint="@color/accent_200"
+            android:progressTint="@color/primary_400" />
 
         <Space
             android:layout_width="match_parent"
@@ -133,7 +135,9 @@
             android:layout_below="@+id/phone_sms_import"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true" />
+            android:layout_alignParentBottom="true"
+            android:secondaryProgressTint="@color/accent_200"
+            android:progressTint="@color/primary_400" />
     </RelativeLayout>
 
 </LinearLayout>
