--- a/res/layout/contact_list_fragment.xml
+++ b/res/layout/contact_list_fragment.xml
@@ -32,7 +32,10 @@
 
         <!-- Use standard android.R class list id instead of app specific id. This is just useful for
              consistency. -->
-        <ListView android:id="@id/android:list"
+
+        <!--android:id="@id/android:list" -->
+        <ListView
+            android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             style="@style/ContactListView"
