--- a/res/layout/group_list_item.xml
+++ b/res/layout/group_list_item.xml
@@ -17,7 +17,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/list_item_height_two_text_lines"
-                style="@style/listViewActivatedStyle">
+                android:descendantFocusability="blocksDescendants"
+
+    style="@style/listViewActivatedStyle">
 
     <!-- Use standard android.R class icon id instead of app specific id. This is just useful for
          consistency. Use scaleType=centerCrop to give a nice full cropped image in the assigned
@@ -84,5 +86,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true" />
+
 
 </RelativeLayout>
