--- a/res/layout/contact_detail_fragment.xml
+++ b/res/layout/contact_detail_fragment.xml
@@ -38,11 +38,12 @@
 
 
 
-    <LinearLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:id="@+id/c"
+        android:id="@+id/swipe_container"
         android:baselineAligned="false">
 
 
@@ -433,7 +434,7 @@
 
 
 
-    </LinearLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
     <FrameLayout
