--- a/res/layout/contact_editor_fragment.xml
+++ b/res/layout/contact_editor_fragment.xml
@@ -213,7 +213,8 @@
             android:layout_height="@dimen/fab_icon_size"
             android:src="@drawable/ic_save_white_24dp"
             android:layout_gravity="center"
-            android:duplicateParentState="true"/>
+            android:duplicateParentState="true"
+            android:baselineAlignBottom="false" />
 
     </com.example.android.contactslist.FloatingActionButton.FloatingActionButton2>
 </FrameLayout>
