--- a/res/layout/notes_editor_fragment.xml
+++ b/res/layout/notes_editor_fragment.xml
@@ -27,153 +27,110 @@
          layout mode and no contact is currently selected and therefore the this fragment will
          simply show a text message instead of contact details. -->
 
-    <TextView android:id="@+id/android:empty"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/no_contact_selected"
-        android:fontFamily="sans-serif-light"
-        android:visibility="gone"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
-
-    <TextView android:id="@+id/contact_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/padding"
-        android:paddingRight="@dimen/padding"
-        android:paddingTop="@dimen/padding"
-        android:visibility="gone"
-        style="@style/contactNameTitle"
-        android:layout_weight="0.05" />
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:layout_marginTop="@dimen/list_padding"
+        android:layout_marginBottom="64dp"
+        android:layout_marginLeft="@dimen/nibble"
+        android:layout_marginRight="@dimen/nibble">
 
-        <ScrollView
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+            android:text="Update"
+            android:id="@+id/event_notes_title" />
+
+        <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/scrollView"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_rowSpan="4"
-            android:fillViewport="false"
-            android:layout_marginLeft="@dimen/listview_item_padding"
-            android:layout_marginRight="@dimen/listview_item_padding">
+            android:inputType="textMultiLine"
+            android:id="@+id/new_notes"
+            android:layout_gravity="center_horizontal"
+            android:hint="Say something positive."
+            android:gravity="start"
+            android:textIsSelectable="false"
+            android:paddingStart="@dimen/padding"
+            android:padding="@dimen/padding"
+            android:paddingTop="32dp" />
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:id="@+id/imageView"
+            android:background="@drawable/rectangle"
+            android:layout_gravity="left" />
 
-            <LinearLayout
-                android:orientation="vertical"
+        <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="50dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/event_note_character_count_view"
+                android:alpha="0.5"
+                android:layout_gravity="right"
+                android:layout_marginTop="@dimen/nibble"
+                android:layout_marginLeft="@dimen/padding" />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Date"
+                android:id="@+id/add_date_check_box"
+                android:layout_gravity="left"
+                android:alpha="0.5" />
+        </FrameLayout>
+
+        <LinearLayout
+            style="@style/contact_detail_item_background"
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/linearLayout4"
+            android:layout_marginTop="@dimen/list_item_vertical_padding">
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:divider="@android:drawable/divider_horizontal_textfield">
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/notes_title"
+                android:id="@+id/textView5"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:textColor="@color/off_white_1" />
 
-                <!--android:inputType="phone"
-                android:inputType="textEmailAddress"-->
+            <ScrollView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:id="@+id/scrollView"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_rowSpan="4"
+                android:fillViewport="false"
+                android:layout_marginBottom="@dimen/list_item_vertical_padding">
 
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_marginTop="@dimen/list_padding"
-                    android:layout_marginBottom="64dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-                        android:text="Update"
-                        android:id="@+id/event_notes_title" />
-
-                    <EditText
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textMultiLine"
-                        android:id="@+id/new_notes"
-                        android:layout_gravity="center_horizontal"
-                        android:hint="Say something positive."
-                        android:gravity="start"
-                        android:textIsSelectable="false"
-                        android:paddingStart="@dimen/padding"
-                        android:padding="@dimen/padding"
-                        android:paddingTop="32dp" />
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:id="@+id/imageView3"
-                        android:background="@drawable/rectangle"
-                        android:layout_gravity="left" />
-
-                    <FrameLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:id="@+id/event_note_character_count_view"
-                            android:alpha="0.5"
-                            android:layout_gravity="right"
-                            android:layout_marginTop="@dimen/nibble"
-                            android:layout_marginLeft="@dimen/padding" />
-
-                        <CheckBox
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Add Date"
-                            android:id="@+id/add_date_check_box"
-                            android:layout_gravity="left"
-                            android:alpha="0.5" />
-                    </FrameLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    style="@style/contact_detail_item_background"
-                    android:orientation="vertical"
+                <TextView
+                    style="@style/AppTheme"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/linearLayout"
-                    android:layout_marginTop="@dimen/list_item_vertical_padding" >
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="@string/notes_title"
-                        android:id="@+id/textView2"
-                        android:textAlignment="center"
-                        android:layout_gravity="center_horizontal"
-                        android:textStyle="bold"
-                        android:gravity="center"
-                        android:textColor="@color/off_white_1" />
-
-                    <FrameLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent" >
-
-                        <TextView
-                            style="@style/AppTheme"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/contact_notes_view"
-                            android:layout_gravity="center_horizontal"
-                            android:hint="  ..."
-                            android:minLines="6"
-                            android:gravity="start"
-                            android:textIsSelectable="true"
-                            android:background="@android:drawable/alert_light_frame"
-                            android:padding="@dimen/padding"
-                            android:longClickable="true" />
-
-                    </FrameLayout>
-                </LinearLayout>
-            </LinearLayout>
-        </ScrollView>
+                    android:id="@+id/contact_notes_view"
+                    android:layout_gravity="center_horizontal"
+                    android:hint="  ..."
+                    android:minLines="6"
+                    android:gravity="start"
+                    android:textIsSelectable="true"
+                    android:background="@android:drawable/alert_light_frame"
+                    android:longClickable="true" />
+            </ScrollView>
+        </LinearLayout>
 
     </LinearLayout>
 
