Created test version of the ContactDetailFragment to track down bug in the pager. Some icons got added to the contact edit dialog fragment -  to be pulled over. TimeStamp class got created - pull over.

--- a/res/layout/contact_stats_spark_chart_item.xml
+++ b/res/layout/contact_stats_spark_chart_item.xml
@@ -50,7 +50,7 @@
             android:autoText="false"
             android:layout_gravity="center_vertical" />
 
-        <com.example.android.contactslist.ui.SparkBarChartView
+        <com.example.android.contactslist.ui.SparkLineList.SparkBarChartView
             android:layout_width="0dp"
             android:layout_height="35dp"
             android:id="@+id/spark_bar_chart"
